fix menu collapse

--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ p.copyright {
 }
 
 .circlelink {
-	padding: 10px;
+	padding: 5px;
 }
 
 .circle:hover {
